==> Microchip-MPLAB-Harmony/net/apps/tcpip_udp_client_server/firmware/src/config/sam_a5d2_xult/initialization.c <==
#include "configuration.h"
#include "definitions.h"
#include "device.h"
#include "net_pres/pres/net_pres_enc_glue.h"
#include "net_pres/pres/net_pres_enc_glue.h"
#include "net_pres/pres/net_pres_enc_glue.h"

void SYS_Initialize ( void* data )
{
  
    CLK_Initialize();
	PIO_Initialize();


 
    TC0_CH0_TimerInitialize(); 
     
    
	BSP_Initialize();
	UART1_Initialize();

    MMU_Initialize();
    Matrix_Initialize();

    INT_Initialize();
	WDT_REGS->WDT_MR = WDT_MR_WDDIS_Msk; 		// Disable WDT 



    /* Initialize the MIIM Driver */
    sysObj.drvMiim = DRV_MIIM_Initialize( DRV_MIIM_INDEX_0, (const SYS_MODULE_INIT *) &drvMiimInitData );


    sysObj.sysTime = SYS_TIME_Initialize(SYS_TIME_INDEX_0, (SYS_MODULE_INIT *)&sysTimeInitData);
    sysObj.sysConsole0 = SYS_CONSOLE_Initialize(SYS_CONSOLE_INDEX_0, (SYS_MODULE_INIT *)&sysConsole0Init);
    sysObj.sysDebug = SYS_DEBUG_Initialize(SYS_DEBUG_INDEX_0, (SYS_MODULE_INIT*)&debugInit);
    SYS_CMD_Initialize((SYS_MODULE_INIT*)&sysCmdInit);


    sysObj.netPres = NET_PRES_Initialize(0, (SYS_MODULE_INIT*)&netPresInitData);


    /* TCPIP Stack Initialization */
    sysObj.tcpip = TCPIP_STACK_Init();
    SYS_ASSERT(sysObj.tcpip != SYS_MODULE_OBJ_INVALID, "TCPIP_STACK_Init Failed" );



    APP_Initialize();



}
