==> Microchip-MPLAB-Harmony/net/apps/tcpip_tcp_client_server/firmware/src/config/sam_e54_xpro/initialization.c <==
#include "configuration.h"
#include "definitions.h"
#include "device.h"

void SYS_Initialize ( void* data )
{
  
    PORT_Initialize();

    CLOCK_Initialize();



    TC0_TimerInitialize();

    SERCOM2_USART_Initialize();

    EVSYS_Initialize();



    /* Initialize the MIIM Driver */
    sysObj.drvMiim = DRV_MIIM_Initialize( DRV_MIIM_INDEX_0, (const SYS_MODULE_INIT *) &drvMiimInitData );


    sysObj.sysTime = SYS_TIME_Initialize(SYS_TIME_INDEX_0, (SYS_MODULE_INIT *)&sysTimeInitData);
    sysObj.sysConsole0 = SYS_CONSOLE_Initialize(SYS_CONSOLE_INDEX_0, (SYS_MODULE_INIT *)&sysConsole0Init);
    sysObj.sysDebug = SYS_DEBUG_Initialize(SYS_DEBUG_INDEX_0, (SYS_MODULE_INIT*)&debugInit);
    SYS_CMD_Initialize((SYS_MODULE_INIT*)&sysCmdInit);



    /* TCPIP Stack Initialization */
    sysObj.tcpip = TCPIP_STACK_Init();
    SYS_ASSERT(sysObj.tcpip != SYS_MODULE_OBJ_INVALID, "TCPIP_STACK_Init Failed" );



    APP_Initialize();


    NVIC_Initialize();

}
